# socket-priority

./: .gitignore  Cargo.toml  Makefile  p1.out  p2.out  p3.out
client_log/: p0.std  p1.std  p2.std  p3.std  p4.std  p5.std  p6.std
python_script/: client.py  client_streaming.py  env.sh  parallel_client.sh  parallel_server.sh  plot.py  rtt_client.py  rtt_server.py  screencast.py  server.py  server_streaming.py
python_script/reliability/: access_time  client.py  client.sh  client_wo_taprio.sh  dynamic_taprio.py  env.sh  ffmpeg.sh  ffplay.sh  server.py  server.sh  server_wo_taprio.sh  set-default-taprio.sh  set-taprio.sh  set-taprio2.sh
scripts/: cat.sh  dynamic_scheduling.sh  r_s.sh  run_3_flow.sh  run_3_flow_pn.sh  run_client.sh  run_server.sh  set-taprio.sh  set-taprio2.sh
server_log/: p0.std  p1.std  p2.std  p3.std  p4.std  p5.std  p6.std
