[package]
name = "socket-prio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
deku = "0.16.0"
itertools = "0.12.0"
net2 = "0.2.39"
nix = { version = "0.26.2", features = ["socket"] }
socket2 = "0.5.5"
